<resources>
    <string name="app_name">BehaviorDemo</string>
    <string name="_1activity">CoordinatorLayout与FloatingActionButton</string>
    <string name="_2activity">CoordinateLayout和RecyclerView</string>
    <string name="_3activity">CoordinateLayout和NestedScrollView</string>
    <string name="_4activity">CoordinateLayout和WebView</string>
    <string name="_5activity">CoordinateLayout和Viewpager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_6activity">AppBarLayout嵌套CollapsingToolbarLayout</string>
    <string name="_7activity">自定义Behavior1</string>
    <string name="_8activity">自定义Behavior2</string>
    <string name="_9activity">NestedScrolling实践</string>
    <string name="_10activity">ScrollView2</string>
    <string name="shareapk">分享已安装的apk</string>
    <string name="stickyScrollview">固定头部的ScrollView</string>
    <string name="searchView">Android.support.v7.widget.SearchView</string>
    <string name="search_hint_tip">请输入搜索内容</string>
    <string name="rxbus">rxjava实现的rxbus</string>
    <string name="title_activity_theme">ThemeActivity</string>
</resources>
